adding the requests to firebase database

--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -2,3 +2,226 @@ iframe {
   width: 100%;
   height: 15em;
 }
+
+html {
+  background: #500;
+  overflow: hidden;
+}
+
+.container,
+.sea,
+.sky,
+.sun,
+.light,
+.bird,
+.birdr1,
+.birdr,
+.fin,
+.wave {
+  position: absolute;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  top: 36%;
+  left: 50%;
+  margin-left: -50%;
+  margin-top: 350px;
+}
+/*  #f5b342, #f59042, #f56342, #f54242*/
+.sky {
+  opacity: .8;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  background: radial-gradient(at 50% 70%, #920, #720, #500, #200);
+  z-index: 30;
+}
+
+.sea {
+  width: 100%;
+  height: 20%;
+  top: 80%;
+  background: radial-gradient(at 50% 0%, #007, #004);
+  z-index: 60;
+}
+
+.sun {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  left: 45%;
+  z-index: 40;
+  background: linear-gradient(#ff0, #d00);
+  box-shadow: 0 0 40px 6px #f20, 0 0 150px 10px #f33;
+  animation: rise 24s ease forwards;
+}
+
+@keyframes rise {
+  0% {
+    top: 50%;
+  }
+  100% {
+    top: 15%;
+  }
+}
+
+.light {
+  opacity: .5;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(at 50% 0%, #ff0, transparent);
+  z-index: 60;
+  animation: over 10s ease forwards;
+}
+
+@keyframes over {
+  0% {
+    opacity: 0
+  }
+  ;
+  100% {
+    opacity: .2
+  }
+  ;
+}
+
+.bird {
+  opacity: 1;
+  top: 50px;
+  left: 00px;
+  width: 10px;
+  height: 8px;
+  border: 2px solid black;
+  border-radius: 50%;
+  border-top-color: transparent;
+  border-left-color: transparent;
+  border-bottom-color: transparent;
+  transform: rotateZ(-75deg);
+  animation: move 25s linear infinite, flap .5s linear alternate infinite;
+  z-index: 70;
+}
+
+.birdr {
+  z-index: 70;
+
+  opacity: 1;
+  top: 50px;
+  width: 10px;
+  height: 8px;
+  border: 2px solid black;
+  border-radius: 50%;
+  border-bottom-color: transparent;
+  border-right-color: transparent;
+  border-top-color: transparent;
+  transform: rotateZ(75deg);
+  margin: 0px 8px;
+  animation: mover 25s linear infinite, flap .5s linear alternate infinite;
+}
+
+.bird1 {
+  opacity: 1;
+  top: 45px;
+  left: 0px;
+  width: 10px;
+  height: 8px;
+  border: 2px solid black;
+  border-radius: 50%;
+  border-top-color: transparent;
+  border-left-color: transparent;
+  border-bottom-color: transparent;
+  transform: rotateZ(-90deg);
+  animation: move 25s linear infinite 1.5s, flap .5s linear alternate infinite 1.5s;
+  z-index: 70;
+}
+
+.birdr1 {
+  z-index: 70;
+
+  opacity: 1;
+  top: 45px;
+  width: 10px;
+  height: 8px;
+  border: 2px solid black;
+  border-radius: 50%;
+  border-bottom-color: transparent;
+  border-right-color: transparent;
+  border-top-color: transparent;
+  transform: rotateZ(90deg);
+  margin: 0px 8px;
+  animation: mover 25s linear infinite 1.5s, flap .5s linear alternate infinite 1.5s;
+}
+
+.wave {
+  margin: 26px 7px;
+  border-left: 3px solid transparent;
+  border-top: 6px solid rgba(50, 50, 140, .3);
+  border-right: 50px solid transparent;
+  transform: rotatez(6deg);
+  z-index: 60;
+}
+
+
+@keyframes move {
+  0% {
+    left: 0px;
+  }
+  100% {
+    left: 100%;
+  }
+}
+
+@keyframes mover {
+  0% {
+    left: -0px;
+  }
+  100% {
+    left: 100%;
+  }
+}
+
+@keyframes flap {
+  0% {
+    border-radius: 90%;
+  }
+  100% {
+    border-radius: 10%;
+  }
+}
+
+body {
+  font-size: 62.5%;
+  font-style: Arial;
+}
+
+.animation-box {
+  width: 85%;
+  height: 27.5rem;
+  background-color: none;
+  margin: 0 auto;
+  overflow: hidden;
+  position: relative;
+}
+
+.animation-container {
+  width: 1000rem;
+  height: 30rem;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+a {
+    color: #FFFFFF;
+    text-decoration: none;
+}
