--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -1,6 +1,6 @@
 iframe {
   width: 100%;
-  height: 15em;
+  height: 25em;
 }
 
 html {
@@ -8,6 +8,13 @@ html {
   overflow: hidden;
 }
 
+
+a {
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+/*
 .container,
 .sea,
 .sky,
@@ -31,7 +38,7 @@ html {
   margin-top: 350px;
 }
 /*  #f5b342, #f59042, #f56342, #f54242*/
-.sky {
+/* .sky {
   opacity: .8;
   width: 100%;
   height: 100%;
@@ -155,14 +162,6 @@ html {
   animation: mover 25s linear infinite 1.5s, flap .5s linear alternate infinite 1.5s;
 }
 
-.wave {
-  margin: 26px 7px;
-  border-left: 3px solid transparent;
-  border-top: 6px solid rgba(50, 50, 140, .3);
-  border-right: 50px solid transparent;
-  transform: rotatez(6deg);
-  z-index: 60;
-}
 
 
 @keyframes move {
@@ -220,8 +219,4 @@ body {
     opacity: 1;
   }
 }
-
-a {
-    color: #FFFFFF;
-    text-decoration: none;
-}
+ */ */
