--- a/client/src/App.css
+++ b/client/src/App.css
@@ -310,12 +310,12 @@ body {
 }
 
 .component-list {
-  display: flex;
+  /* display: flex; */
   align-items: center;
   position: absolute;
   background-color: #FFFFFF;
   z-index: 80;
-  max-height: 40%;
+  max-height: 50%;
   padding: 15px;
 }
 
