--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,11 +9,30 @@ h3 {
 
 h4 {
   font-size: 1.2em;
+  color: black;
 
 }
 
 .photoSlider {
   z-index: 80;
+}
+
+.contact-detail {
+  position: absolute;
+  margin-left: 60%;
+  margin-top: 7%;
+  text-align: justify;
+  z-index: 83;
+  padding: 10px;
+  background: #FFFFFF;
+}
+
+.contact-heading {
+  position: absolute;
+  margin-left: 65%;
+  margin-top: 1%;
+  background: #FFFFFF;
+  z-index: 83;
 }
 
 .chatbot {
@@ -103,7 +122,7 @@ img {
   justify-content: flex-end;
   font-size: 2rem;
   display: flex;
-  top: 31.5rem;
+  top: 41.5rem;
   left: 70%;
   opacity: 0;
   color: #F0A3BE;
@@ -132,7 +151,7 @@ img {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  top: 17.5%;
+  top: 12.5%;
   background-color: rgba(255, 0, 0, 0);
   left: 50%;
   margin-left: -50%;
@@ -309,6 +328,7 @@ body {
 
 .component-list {
   /* display: flex; */
+  colour: black;
   align-items: center;
   position: absolute;
   background-color: #FFFFFF;
